# thesis-code

./: .gitignore  CMakeLists.txt  changelog.org  generate_random_model.py
HMMlib/: hmm.hpp  hmm_matrix.hpp  hmm_table.hpp  hmm_vector.hpp
data/: 10.hmm  12.hmm  128.hmm  14.hmm  16.hmm  18.hmm  2.hmm  20.hmm  21.hmm  256.hmm  2_simple.hmm  2x2.fa  2x2.hmm  2x2_new.hmm  32.hmm  4.hmm  6.hmm  64.hmm  7.hmm  70.hmm  8.hmm  genome1.fa_new  genome1_100000.fa_new  genome1_1000000.fa_new  genome1_128.fa  genome1_16.fa  genome1_16.fa_new  genome1_256.fa  genome1_32.fa  genome1_4.fa  genome1_512.fa  genome1_64.fa  genome1_64.fa_new  genome1_8.fa  genome1_9.fa_new  genome1_large.fa  genome1_large.fa_new  simple_new.hmm
experiments/: CMakeLists.txt  backward.cpp  bench_indexed_posterior.cpp  bench_posterior.cpp  bench_viterbi.cpp  bench_viterbi_extended.cpp  complexity.cpp  forward.cpp  gen_fibonacci.cpp  hmm_experiments.cpp  hmm_experiments_new.cpp  indexed_posterior.cpp  model.cpp  papi_viterbi.cpp  posterior.cpp  posterior_model.cpp  posterior_sequence.cpp  profile_indexed_posterior.cpp  profile_posterior.cpp  profile_viterbi.cpp  sequence.cpp  viterbi_example.cpp
fasta/: CMakeLists.txt  fasta.c  fasta.cpp  fasta_reader.cpp  fasta_reader.hpp
hmm/: CMakeLists.txt  hmm.c  hmm.cpp  hmm.h  hmm.hpp  hmm_reader.cpp
tests/: hmm_test.cpp
zipHMM/: CMakeLists.txt  MapReduceJobControl.hpp  Stage2JobControl.hpp  backwarder.cpp  backwarder.hpp  ds.cpp  ds.hpp  forwarder.cpp  forwarder.hpp  hmm_suite.cpp  hmm_suite.hpp  hmm_utils.cpp  hmm_utils.hpp  hmm_utils_viterbi.cpp  hmm_utils_viterbi.hpp  matrix.hpp  posterior_decoding.hpp  viterbi.cpp  viterbi.hpp
